# Universety

./: .gitignore  .gitmodules  README.md  latex_tips.txt  naming rules.txt  repo_structure.drawio  report_naming  report_naming.txt
1_COURSE/: English.docx  In_yaz_2KR_Sdat_do_9_05.docx  Leskin_9892_karantin_2.docx  Титульник.doc
1_COURSE/Physics/lr3(2)/: document.tex  lr3(2).aux  lr3(2).tex  lr3(2).toc
1_COURSE/Physics/lr4(8)/: lr4(8).tex  mol.png~  report.tex
1_COURSE/Physics/lr5(9)/: 9894_Чтецова_Лада_ЛР9.docx  l5(9).aux  l5(9).tex
1_COURSE/Reports_Programming/course_work/: course_work.aux  course_work.blg  course_work.tex  course_work.toc
1_COURSE/Reports_Programming/course_work/src/: CMakeLists.txt  Colors.h  calck.cpp  calck.h  countVC.cpp  countVC.h  countWords.cpp  countWords.h  input.cpp  input.h  main.cpp  openFile.cpp  openFile.h  printFile.cpp  printFile.h  sortVC.cpp  sortVC.h  source_code_Leskin_Miller_9892.zip1  writeFile.cpp  writeFile.h
1_COURSE/Reports_Programming/lr1/: a.out  lr1.aux  lr1.cpp  lr1.tex  sceme.drawio
1_COURSE/VIT/lr5/: document.tex
1_COURSE/lr5 (---)/: Report_lab5.docx  document.aux  document.tex  stiffness.aux  stiffness.tex
1_COURSE/АиГ_и_МатАн/: ВНИМАНИЮ ОБУЧАЮЩИХСЯ.docx  ИДЗ - определенные и несобственные интегралы.doc  КР1 - разбор задач.doc  Несобственные интегралы (18.doc  Номера вариантов (91-93).doc
2_COURSE/1_SEM/DISCRETE_MATHEMATICS/: IDZ2.doc  Leskin_9892_IDZ2_DM.docx  graph_idz2.drawio
2_COURSE/1_SEM/ECONOMICS/: Economics_IHW1_Leskin_9892.xlsx  eco.txt  (+2 more)
latex_template/: report.tex  useful_tips.txt
(+152 files in other folders)
